log

Wed 13 Mar 2024 08:48:07 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
77b0551
Wed 13 Mar 2024 08:53:39 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cbfdfa9
Wed 13 Mar 2024 08:59:52 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:47:1: error: expected identifier or ‘(’ before ‘{’ token
   47 | {
      | ^
Compilation failed
93fdd8e
Wed 13 Mar 2024 09:03:50 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   48 |   for (int i = 0; i < size; i++);
      |   ^~~
exercises.c:49:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   49 |   {
      |   ^
exercises.c:50:13: error: ‘i’ undeclared (first use in this function)
   50 |     if (arr[i] % 2 == 0)
      |             ^
exercises.c:50:13: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
845dcb1
Wed 13 Mar 2024 09:04:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
4277b83
Wed 13 Mar 2024 09:12:42 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Wed 13 Mar 2024 09:14:02 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Wed 13 Mar 2024 09:16:27 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
8b1932d
